# space-invaders-rust

./: Cargo.toml  LICENSE  README.md
src/: invaders.rs  lib.rs  main.rs  player.rs  render.rs  shot.rs
